--- a/3. naloga.ipynb
+++ b/3. naloga.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "[420 rows x 3 columns]"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,19 +152,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.axis.XTick at 0x1be198597f0>,\n",
-       "  <matplotlib.axis.XTick at 0x1be198597c0>,\n",
-       "  <matplotlib.axis.XTick at 0x1be19854220>,\n",
-       "  <matplotlib.axis.XTick at 0x1be1988b370>,\n",
-       "  <matplotlib.axis.XTick at 0x1be1988bac0>,\n",
-       "  <matplotlib.axis.XTick at 0x1be19891250>,\n",
-       "  <matplotlib.axis.XTick at 0x1be1988b760>],\n",
+       "([<matplotlib.axis.XTick at 0x1fbd20da160>,\n",
+       "  <matplotlib.axis.XTick at 0x1fbd20da130>,\n",
+       "  <matplotlib.axis.XTick at 0x1fbd20c77c0>,\n",
+       "  <matplotlib.axis.XTick at 0x1fbd4108d00>,\n",
+       "  <matplotlib.axis.XTick at 0x1fbd412b490>,\n",
+       "  <matplotlib.axis.XTick at 0x1fbd41088b0>,\n",
+       "  <matplotlib.axis.XTick at 0x1fbd412bd90>],\n",
        " [Text(0, 0, '1986'),\n",
        "  Text(60, 0, '1991'),\n",
        "  Text(120, 0, '1996'),\n",
@@ -174,7 +174,7 @@
        "  Text(360, 0, '2016')])"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
        "Text(0, 0.5, 'temperatura')"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -246,8 +246,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -262,7 +264,7 @@
        "Text(0, 0.5, 'temperatura')"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -295,28 +297,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.53218307])"
+       "(array([6.17511858]), array([253.81473068]))"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "std_L = np.sqrt(result[1]/(35-2))\n",
-    "std_L"
+    "aic_l = 4 + 35*np.log(result[1])\n",
+    "std_L, aic_l"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +328,7 @@
        "Text(0, 0.5, 'Število rezidualov')"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -355,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +367,7 @@
        "Text(0, 0.5, 'Vrednost reziduala')"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -410,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -424,7 +427,7 @@
        " -9.04179670984891)"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -472,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -483,7 +486,7 @@
        "Text(0.5, 0, 'Vrednost reziduala')"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -510,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -521,7 +524,7 @@
        "Text(0, 0.5, 'Vrednost reziduala')"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -550,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +562,7 @@
        "-4.066191827689636e-15"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +589,7 @@
        "array([1.73922435])"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +610,7 @@
        "Text(0.5, 0, 'Vrednost reziduala')"
       ]
      },
-     "execution_count": 236,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -665,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +677,7 @@
        "(3748.2703085236194, 19.4933219988683, False)"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +707,7 @@
        "4236.89472273255"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +728,7 @@
        "Text(0, 0.5, 'temperatura')"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -758,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -769,7 +772,7 @@
        "Text(0.5, 0, 'Vrednost reziduala')"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -796,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -807,7 +810,7 @@
        "Text(0, 0.5, 'Vrednost reziduala')"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -836,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +848,7 @@
        "Text(0, 0.5, 'Vrednost reziduala')"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -889,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +905,7 @@
        " array([ True]))"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,29 +937,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([3001.77676816]), array([2994.39246083]), 4236.89472273255)"
+       "(array([3005.77676816]), array([3000.39246083]), 4236.89472273255)"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "aic_A = 4 + L*np.log(RSS_W)\n",
-    "aic_B = 6 + L*np.log(RSS_V)\n",
+    "aic_A = 2*4 + L*np.log(RSS_W)\n",
+    "aic_B = 2*6 + L*np.log(RSS_V)\n",
     "aic_A, aic_B, aic_L"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
@@ -972,7 +975,7 @@
        " -0.0602380952382191)"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1006,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1018,7 @@
        "Text(0.5, 0, 'Vrednost reziduala')"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1042,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1051,7 +1054,7 @@
        "Text(0, 0.5, 'Vrednost reziduala')"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1080,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1089,7 +1092,7 @@
        "array([1.72405157])"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1101,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1113,7 @@
        "420"
       ]
      },
-     "execution_count": 249,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1141,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1153,7 @@
        "Text(0, 0.5, 'Vrednost reziduala')"
       ]
      },
-     "execution_count": 250,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
